@@ -1,7 +1,7 @@
 {
   ApplicationName = "GMastermind";
   ApplicationDescription = "GNUstep mastermind game";
-  ApplicationRelease = "Mastermind 0.5";
+  ApplicationRelease = "0.6";
   FullVersionID = "0.6";
   Authors = ("Marko Riedel <mriedel@neuearbeit.de>");
   Copyright = "Copyright (C) 2002-2011 Free Software Foundation, Inc.";
