@@ -1,3 +1,10 @@
+2011-07-12 Riccardo Mottola <rm@gnu.org> for Sebastian Reitenbach
+
+	* Controller.m:
+	* View.m
+	* main.m
+	c99 fixes and warnings
+
 2011-07-12 Riccardo Mottola <rm@gnu.org>
 
 	* Controller.m:
